--- a/project.config.json
+++ b/project.config.json
@@ -8,7 +8,7 @@
     "es6": false,
     "enhance": false,
     "postcss": false,
-    "preloadBackgroundData": false,
+    "preloadBackgroundData": true,
     "minified": false,
     "newFeature": false,
     "coverView": true,
