--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "taro-demo",
-  "version": "1.0.0",
+  "name": "hi-blog-taro",
+  "version": "0.1.6",
   "private": true,
-  "description": "",
+  "description": "小溪里博客的小程序版",
   "templateInfo": {
     "name": "default",
     "typescript": true,
     "css": "stylus"
   },
   "scripts": {
+    "start": "npm run watch",
+    "watch": "npm run dev:weapp",
+    "build": "npm run build:weapp -- --watch",
+    "release": "npm run build:weapp",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
@@ -36,15 +40,16 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.3.0-alpha.2",
     "@tarojs/cli": "3.3.0-alpha.2",
+    "@tarojs/components": "3.3.0-alpha.2",
+    "@tarojs/plugin-html": "3.3.0-alpha.2",
     "@tarojs/react": "3.3.0-alpha.2",
     "@tarojs/runtime": "3.3.0-alpha.2",
     "@tarojs/taro": "3.3.0-alpha.2",
-    "@tarojs/plugin-html": "3.3.0-alpha.2",
     "linaria": "^2.1.0",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "webpack-bundle-analyzer": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
